Iframe method for welcome video

--- a/Original_TopA.html
+++ b/Original_TopA.html
@@ -1,4 +1,3 @@
-<div class="tm-block tm-block-light">
 <section class="tm-top-a uk-grid" data-uk-grid-match="{target:'&gt; div &gt; .uk-panel'}" data-uk-grid-margin="">
 <div class="uk-width-1-1 uk-row-first">
 <div class="uk-panel">
@@ -7,23 +6,21 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-space uk-text-center uk-scrollspy-init-inview uk-scrollspy-inview uk-animation-fade">
 <h2 class="uk-h4"><span style="color: #036d98;">Speakers bureau</span></h2>
-<p><span style="color: #000000;">Organized, accurate, balanced, and objective information about victims of domestic violence from national leading experts in the field</span></p>
-<a class="uk-button uk-button-primary" href="press-room/speakers-bureau.html">Read more</a></div>
+<p><span style="color: #000000;">Objective information about victims of domestic violence from national leading experts in the field</span></p>
+<a class="uk-button uk-button-primary uk-animation-hover uk-animation-scale" href="press-room/speakers-bureau.html">Read more</a></div>
 </li>
 <li class="">
 <div class="uk-panel uk-panel-space uk-text-center uk-scrollspy-init-inview uk-scrollspy-inview uk-animation-fade">
-<h2 class="uk-h4"><span style="color: #036d98;">Welcome Video</span></h2>
-<p>...</p>
-<a class="uk-button uk-button-primary" href="library/news-articles.html">Read more</a></div>
+<h2 class="uk-h4" style="text-align: center;"><iframe type="video/mp4" width="300" height="175" controls="controls" src="images/movies/Safe Welcome Message.mp4" frameborder="0" allowfullscreen="allowfullscreen"></iframe></h2>
+</div>
 </li>
 <li class="">
 <div class="uk-panel uk-panel-space uk-text-center uk-scrollspy-init-inview uk-scrollspy-inview uk-animation-fade">
 <h2 class="uk-h4"><span style="color: #036d98;">News Article</span></h2>
 <p><span style="color: #000000;">Up to date information and news regarding underserved victims and the issues that SAFE addresses </span></p>
-<a class="uk-button uk-button-primary" href="library/news-articles.html">Read more</a></div>
+<a class="uk-button uk-button-primary uk-animation-hover uk-animation-scale" href="library/news-articles.html">Read more</a></div>
 </li>
 </ul>
 </div>
 </div>
 </section>
-</div>
