--- a/TopB.html
+++ b/TopB.html
@@ -15,15 +15,15 @@
 </div>
 </div>
 </li>
-<li class="">
+<li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Fusilli</a></h4>
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">&nbsp;</div>
-</div>
+<div class="uk-float-left uk-text-truncate">Italian pasta, courgette</div>
+<span class="uk-float-right tm-badge-price">$9,00</span></div>
 </div>
 </li>
 <li class="">
@@ -44,10 +44,10 @@
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Speakers' Bureau</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_coconut_macaroons.jpg" data-src="/themes/joomla/2014/eat/images/yootheme/home_coconut_macaroons.jpg" alt="Coconut Macaroons" width="250" height="150" />
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Macaroons</a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -55,10 +55,10 @@
 </div>
 </li>
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">News Article</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Pasta &amp; Pesto</a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_green_pasta.jpg" alt="Fusilli" width="250" height="150" />
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Fusilli</a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">Italian pasta, courgette</div>
@@ -66,14 +66,14 @@
 </div>
 </li>
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Delicious</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Sweets &amp; Biscuits</a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_biscotti.jpg" alt="Biscotti" width="250" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Biscotti</a></h4>
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Macaroons</a></h4>
+
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Dolce cucina, chocolate</div>
-<span class="uk-float-right tm-badge-price">$8,00</span></div>
+</div>
 </div>
 </li>
 </ul>
@@ -89,8 +89,7 @@
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" data-src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" alt="box" width="250" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Tortellini</a></h4>
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Italian pasta, ricotta</div>
-<span class="uk-float-right tm-badge-price">$8,00</span></div>
+</div>
 </div>
 </li>
 <li class="uk-row-first">
