--- a/TopB.html
+++ b/TopB.html
@@ -20,7 +20,6 @@
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Fusilli</a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">Italian pasta, courgette</div>
 <span class="uk-float-right tm-badge-price">$9,00</span></div>
@@ -68,12 +67,10 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="&quot;/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Macaroons</a></h4>
-
-<div class="uk-clearfix">
-</div>
+<div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 </ul>
@@ -85,17 +82,16 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" data-uk-scrollspy="{cls:'uk-animation-fade'}" style="min-height: 0px;">
 <p class="uk-text-muted tm-uppercasae uk-margin-bottom-remove">Handmade</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Pasta &amp; Pesto</a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">MEMBERSHIP PROFILE</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" data-src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" alt="box" width="250" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Tortellini</a></h4>
-<div class="uk-clearfix">
-</div>
+<div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Culinary</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Herbs &amp; Spices</a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">INTERNSHIP OPPORTUNITIES</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_pepper.jpg" alt="wine" width="250" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Pepper set</a></h4>
 <div class="uk-clearfix">
@@ -106,7 +102,7 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Delicious</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Sweets &amp; Biscuits</a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">RESEARCH</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_biscuits.jpg" alt="biscuits" width="250" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Cantuccini</a></h4>
 <div class="uk-clearfix">
