--- a/TopB.html
+++ b/TopB.html
@@ -1,4 +1,4 @@
-<div id="slideshow-55-596d911de7d59" class="wk-slideshow wk-slideshow-eat" data-widgetkit="slideshow" data-options="{&quot;style&quot;:&quot;eat&quot;,&quot;autoplay&quot;:0,&quot;interval&quot;:5000,&quot;width&quot;:&quot;auto&quot;,&quot;height&quot;:400,&quot;duration&quot;:400,&quot;index&quot;:0,&quot;order&quot;:&quot;default&quot;,&quot;navigation&quot;:1,&quot;buttons&quot;:0,&quot;slices&quot;:15,&quot;animated&quot;:&quot;scroll&quot;,&quot;caption_animation_duration&quot;:200}" style="visibility: visible; position: relative; width: 920px;">
+<div id="slideshow-55-596d911de7d59" class="wk-slideshow wk-slideshow-eat" data-widgetkit="slideshow" data-options="{&quot;style&quot;:&quot;eat&quot;,&quot;autoplay&quot;:1,&quot;interval&quot;:4000,&quot;width&quot;:&quot;auto&quot;,&quot;height&quot;:400,&quot;duration&quot;:400,&quot;index&quot;:0,&quot;order&quot;:&quot;default&quot;,&quot;navigation&quot;:1,&quot;buttons&quot;:0,&quot;slices&quot;:15,&quot;animated&quot;:&quot;scroll&quot;,&quot;caption_animation_duration&quot;:200}" style="visibility: visible; position: relative; width: 920px;">
 <div>
 <ul class="slides" style="width: 100%; overflow: hidden; position: relative; height: 400px;">
 <li style="top: 0px; left: 0px; position: absolute; display: list-item; z-index: 2; height: 400px; width: 920px;">
@@ -18,11 +18,11 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Italian pasta, courgette</div>
-<span class="uk-float-right tm-badge-price">$9,00</span></div>
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
+<span class="uk-float-right tm-badge-price"></span></div>
 </div>
 </li>
 <li class="">
@@ -46,8 +46,8 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Macaroons</a></h4>
+<img class="uk-align-center" src="/safe1/images/speakersbureau.jpg" width="220" height="150" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 <span class="uk-float-right tm-badge-price"></span></div>
@@ -68,8 +68,8 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="&quot;/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Macaroons</a></h4>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
