--- a/TopB.html
+++ b/TopB.html
@@ -18,11 +18,11 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/news-articles.html"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
-<span class="uk-float-right tm-badge-price"></span></div>
+</div>
 </div>
 </li>
 <li class="">
@@ -45,12 +45,12 @@
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/speakersbureau.jpg" width="220" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
-<span class="uk-float-right tm-badge-price"></span></div>
+</div>
 </div>
 </li>
 <li class="uk-row-first">
@@ -58,16 +58,16 @@
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Fusilli</a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Italian pasta, courgette</div>
-<span class="uk-float-right tm-badge-price">$9,00</span></div>
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
+</div>
 </div>
 </li>
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="&quot;/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
@@ -81,33 +81,33 @@
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" data-uk-scrollspy="{cls:'uk-animation-fade'}" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercasae uk-margin-bottom-remove">Handmade</p>
+<p class="uk-text-muted tm-uppercasae uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">MEMBERSHIP PROFILE</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" data-src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" alt="box" width="250" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Tortellini</a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Culinary</p>
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">INTERNSHIP OPPORTUNITIES</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_pepper.jpg" alt="wine" width="250" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Pepper set</a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Colored pepper, grinder</div>
-<span class="uk-float-right tm-badge-price"></span></div>
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
+</div>
 </div>
 </li>
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">Delicious</p>
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">RESEARCH</a></h3>
 <img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_biscuits.jpg" alt="biscuits" width="250" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">Cantuccini</a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">Classico, almonds</div>
-<span class="uk-float-right tm-badge-price">$6,00</span></div>
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
+</div>
 </div>
 </li>
 </ul>
