--- a/TopB.html
+++ b/TopB.html
@@ -19,10 +19,9 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/news-articles.html"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
-<div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">&nbsp;</div>
-</div>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 <li class="">
@@ -46,7 +45,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/speakersbureau.jpg" width="220" height="150" />
+<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -80,34 +79,32 @@
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" data-uk-scrollspy="{cls:'uk-animation-fade'}" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercasae uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">MEMBERSHIP PROFILE</a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" data-src="/themes/joomla/2014/eat/images/yootheme/home_tortellini.jpg" alt="box" width="250" height="150" />
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">MEMBERSHIP PROFILE</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="150" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<div class="uk-clearfix">
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
+</div>
+</div>
+</li>
+<li class="uk-row-first">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">INTERNSHIP OPPORTUNITIES</a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_pepper.jpg" alt="wine" width="250" height="150" />
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/research.html"><span style="color: #036d98;">RESEARCH</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
-<div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">&nbsp;</div>
-</div>
-</div>
-</li>
-<li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 0px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">RESEARCH</a></h3>
-<img class="uk-align-center" src="/themes/joomla/2014/eat/images/yootheme/home_biscuits.jpg" alt="biscuits" width="250" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
-<div class="uk-clearfix">
-<div class="uk-float-left uk-text-truncate">&nbsp;</div>
-</div>
+<div class="uk-clearfix">&nbsp;</div>
 </div>
 </li>
 </ul>
