--- a/TopB.html
+++ b/TopB.html
@@ -1,15 +1,15 @@
 <div id="slideshow-55-596d911de7d59" class="wk-slideshow wk-slideshow-eat" data-widgetkit="slideshow" data-options="{&quot;style&quot;:&quot;eat&quot;,&quot;autoplay&quot;:1,&quot;interval&quot;:4000,&quot;width&quot;:&quot;auto&quot;,&quot;height&quot;:400,&quot;duration&quot;:400,&quot;index&quot;:0,&quot;order&quot;:&quot;default&quot;,&quot;navigation&quot;:1,&quot;buttons&quot;:0,&quot;slices&quot;:15,&quot;animated&quot;:&quot;scroll&quot;,&quot;caption_animation_duration&quot;:200}" style="visibility: visible; position: relative; width: 920px;">
 <div>
 <ul class="slides" style="width: 100%; overflow: hidden; position: relative; height: 400px;">
-<li style="top: 0px; left: 0px; position: absolute; display: list-item; z-index: 2; height: 400px; width: 920px;">
+<li style="top: 0px; left: 0px; position: absolute; display: list-item; z-index: 2; height: 400px; width: 1060px;">
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 326px;">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 328px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove uk-animation-hover uk-animation-top-left"><a class="uk-link-reset" href="/safe1/finding-help/resources.html"><span style="color: #036d98;">Educational Resources</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/brochures/Sibling Abuse Brochure.png" alt="SiblingAbuseBrochure" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
@@ -20,8 +20,9 @@
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/news-articles.html"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
 <img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">&nbsp;</div>
+<div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
 </li>
 <li class="">
@@ -38,7 +39,7 @@
 </ul>
 </article>
 </li>
-<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 920px;">
+<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 1060px;">
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
@@ -75,15 +76,15 @@
 </ul>
 </article>
 </li>
-<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 920px;">
+<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 1060px;">
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">MEMBERSHIP PROFILE</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="150" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a>&nbsp;</h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
