--- a/BottomBContactFormMap.html
+++ b/BottomBContactFormMap.html
@@ -5,8 +5,8 @@
 <li>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Location</h2>
-205 East Houston Street <br />New York 10002, USA
-<p>Mon – Sat: 11AM – 9PM <br />Sunday: 11AM – 8PM</p>
+3400 Calloway Drive, Suite 703E<br />
+<p>Mon – Fri: 8AM – 5PM </p>
 </div>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Follow us</h2>
