Linked social icons

--- a/BottomBContactFormMap.html
+++ b/BottomBContactFormMap.html
@@ -6,11 +6,11 @@
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Location</h2>
 3400 Calloway Drive, Suite 703E<br />
-<p>Mon – Fri: 8AM – 5PM </p>
+<p>Mon – Fri: 8AM – 5PM</p>
 </div>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Follow us</h2>
-<p><a href="#" class="uk-icon-button uk-icon-twitter"></a> <a href="#" class="uk-icon-button uk-icon-facebook"></a> <a href="#" class="uk-icon-button uk-icon-pinterest"></a> <a href="#" class="uk-icon-button uk-icon-linkedin"></a> <a href="#" class="uk-icon-button uk-icon-youtube"></a> <a href="#" class="uk-icon-button uk-icon-rss"></a> <a href="#" class="uk-icon-button uk-icon-instagram"></a></p>
+<p><a href="https://twitter.com/SAFE_USA" class="uk-icon-button uk-icon-twitter"></a> <a href="https://www.facebook.com/stopabuseforeveryone.SAFE/" class="uk-icon-button uk-icon-facebook"></a> <a href="https://www.pinterest.com/pin/490822059374626250/" class="uk-icon-button uk-icon-pinterest"></a> <a href="https://www.linkedin.com/company/stop-abuse-for-everyone" class="uk-icon-button uk-icon-linkedin"></a> <a href="https://www.youtube.com/channel/UCwGq9PnMYMjiRAM4VlgycWg" class="uk-icon-button uk-icon-youtube"></a> <a href="#" class="uk-icon-button uk-icon-rss"></a> <a href="#" class="uk-icon-button uk-icon-instagram"></a></p>
 </div>
 </li>
 <li>
