Updated contact form

--- a/BottomBContactFormMap.html
+++ b/BottomBContactFormMap.html
@@ -5,7 +5,7 @@
 <li>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Location</h2>
-3400 Calloway Drive, Suite 703E<br />
+3400 Calloway Drive, Suite 703E <br />Bakersfield, CA 93312 <br />661-829-6848
 <p>Mon – Fri: 8AM – 5PM</p>
 </div>
 <div class="uk-panel uk-panel-header">
@@ -22,6 +22,9 @@
 </div>
 <div class="uk-form-row">
 <div class="uk-form-controls"><input type="text" placeholder="Email" class="uk-width-1-1" /></div>
+</div>
+<div class="uk-form-row">
+<div class="uk-form-controls"><input type="text" placeholder="Phone" class="uk-width-1-1" /></div>
 </div>
 <div class="uk-form-row"><textarea cols="" rows="" placeholder=" " class="&quot;uk-width-1-1">Message</textarea></div>
 <div class="uk-form-row">
