--- a/TopB.html
+++ b/TopB.html
@@ -5,11 +5,11 @@
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 328px;">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove uk-animation-hover uk-animation-top-left"><a class="uk-link-reset" href="/safe1/finding-help/resources.html"><span style="color: #036d98;">Educational Resources</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/brochures/Sibling Abuse Brochure.png" alt="SiblingAbuseBrochure" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">BECOME A MEMBER</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="220" />
+
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
@@ -25,23 +25,35 @@
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
 </li>
-<li class="">
+<li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-animation-top-right" href="/safe1/finding-help/national-directory.html"><span style="color: #036d98;">National Directory of Services</span></a></h3>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-animation-top-right" href="/safe1/finding-help/national-directory.html"><span style="color: #036d98;">National Directory</span></a></h3>
 <img id="usa" class="map" name="usa" alt="" src="/images/usa2.png" width="220" height="220" usemap="#usa" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default">for underserved victims</a></h4>
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
 </div>
 </li>
+
+
 </ul>
 </article>
 </li>
 <li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 1060px;">
 <article class="wk-content clearfix">
 <ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
+<li class="uk-row-first">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<div class="uk-clearfix">&nbsp;</div>
+</div>
+</li>
+
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
@@ -53,6 +65,25 @@
 </div>
 </div>
 </li>
+
+<li class="uk-row-first">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
+<div class="uk-clearfix">&nbsp;</div>
+</div>
+</li>
+
+
+</ul>
+</article>
+</li>
+<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 1060px;">
+<article class="wk-content clearfix">
+<ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
+
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
@@ -64,41 +95,19 @@
 </div>
 </div>
 </li>
+
 <li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
+<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 328px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
-<div class="uk-clearfix">&nbsp;</div>
-</div>
-</li>
-</ul>
-</article>
-</li>
-<li style="top: 0px; left: 0px; position: absolute; display: none; height: 400px; width: 1060px;">
-<article class="wk-content clearfix">
-<ul class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin="" data-uk-grid-match="{target:'&gt; li &gt; .uk-panel'}">
-<li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">MEMBERSHIP PROFILE</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a>&nbsp;</h4>
+<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove uk-animation-hover uk-animation-top-left"><a class="uk-link-reset" href="/safe1/finding-help/resources.html"><span style="color: #036d98;">Educational Resources</span></a></h3>
+<img class="uk-align-center" src="/safe1/images/brochures/Sibling Abuse Brochure.png" alt="SiblingAbuseBrochure" width="220" height="220" />
+<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
 </div>
 </div>
 </li>
-<li class="uk-row-first">
-<div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
-<p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
-<h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
-<h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
-<div class="uk-clearfix">&nbsp;</div>
-</div>
-</li>
+
 <li class="uk-row-first">
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
