--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -2,7 +2,7 @@
 			<div class="uk-container uk-container-center">
 				<section class="tm-bottom-a uk-grid" data-uk-grid-match="{target:'> div > .uk-panel'}" data-uk-grid-margin="">
 <div class="uk-width-1-1 uk-row-first"><div class="uk-panel uk-text-center">
-	<h1 class="uk-h2">Our products</h1>
+	<h1 class="uk-h2">OUR PHOTOS/VIDEOS</h1>
 <div class="uk-grid" data-uk-grid-margin="">
   <div class="uk-width-1-1 uk-row-first">
 
