Updated map longitude/latitude

--- a/BottomBContactFormMap.html
+++ b/BottomBContactFormMap.html
@@ -5,8 +5,8 @@
 <li>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Location</h2>
-3400 Calloway Drive, Suite 703E <br />Bakersfield, CA 93312 <br />661-829-6848
-<p>Mon – Fri: 8AM – 5PM</p>
+3400 Calloway Drive, <br/>Suite 703E <br />Bakersfield, CA 93312 <br />
+<p>Mon – Fri: 8AM – 5PM</p>661-829-6848
 </div>
 <div class="uk-panel uk-panel-header">
 <h2 class="uk-panel-title">Follow us</h2>
@@ -30,11 +30,13 @@
 <div class="uk-form-row">
 <div class="uk-form-controls"><button class="uk-button uk-button-primary">Submit</button></div>
 </div>
+<div class="uk-form-row">
+<div id="fox-m249-submit-box" class="fox-item fox-item-submit fox-item-submit-fields control-group"><span class="control-label collapsed"></span><div class="controls"><button type="submit" class="btn btn-primary submit-button"><span class="caption">Submit</span></button></div></div></div>
 </form></div>
 </li>
 </ul>
 </li>
 <li>
-<div id="map-14-59a4988d4f4c7" class="wk-map wk-map-default" style="height: 300px; width: 100%; position: relative; overflow: hidden;" data-widgetkit="googlemaps" data-options="{&quot;title&quot;:&quot;map&quot;,&quot;lat&quot;:&quot;35.3917783&quot;,&quot;lng&quot;:&quot;-119.1086242&quot;,&quot;icon&quot;:&quot;red-dot&quot;,&quot;popup&quot;:1,&quot;text&quot;:&quot;&quot;,&quot;mainIcon&quot;:&quot;red-dot&quot;,&quot;width&quot;:&quot;auto&quot;,&quot;height&quot;:300,&quot;style&quot;:&quot;default&quot;,&quot;mapTypeId&quot;:&quot;roadmap&quot;,&quot;zoom&quot;:13,&quot;mapCtrl&quot;:1,&quot;typeCtrl&quot;:0,&quot;directions&quot;:0,&quot;unitSystem&quot;:0,&quot;clusterMarker&quot;:0,&quot;styler_invert_lightness&quot;:0,&quot;zoomWhl&quot;:1,&quot;draggable&quot;:1,&quot;styler_hue&quot;:&quot;&quot;,&quot;styler_saturation&quot;:0,&quot;styler_lightness&quot;:0,&quot;styler_gamma&quot;:0,&quot;adresses&quot;:[]}">&nbsp;</div>
+<div id="map-14-59a4988d4f4c7" class="wk-map wk-map-default" style="height: 300px; width: 100%; position: relative; overflow: hidden;" data-widgetkit="googlemaps" data-options="{&quot;title&quot;:&quot;map&quot;,&quot;lat&quot;:&quot;35.391305&quot;,&quot;lng&quot;:&quot;-119.108585&quot;,&quot;icon&quot;:&quot;red-dot&quot;,&quot;popup&quot;:1,&quot;text&quot;:&quot;&quot;,&quot;mainIcon&quot;:&quot;red-dot&quot;,&quot;width&quot;:&quot;auto&quot;,&quot;height&quot;:300,&quot;style&quot;:&quot;default&quot;,&quot;mapTypeId&quot;:&quot;roadmap&quot;,&quot;zoom&quot;:13,&quot;mapCtrl&quot;:1,&quot;typeCtrl&quot;:0,&quot;directions&quot;:0,&quot;unitSystem&quot;:0,&quot;clusterMarker&quot;:0,&quot;styler_invert_lightness&quot;:0,&quot;zoomWhl&quot;:1,&quot;draggable&quot;:1,&quot;styler_hue&quot;:&quot;&quot;,&quot;styler_saturation&quot;:0,&quot;styler_lightness&quot;:0,&quot;styler_gamma&quot;:0,&quot;adresses&quot;:[]}">&nbsp;</div>
 </li>
 </ul>
